--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,7 +386,7 @@ label {
   width: 100%;
   top: 0;
   position: fixed;
-  background: url('http://placehold.it/1600x1600') center center no-repeat; 
+  /*background: url('http://placehold.it/1600x1600') center center no-repeat; */
   background-size: cover;
   z-index: -100;
 }
@@ -433,7 +433,7 @@ label {
 #hero {
 	background: rgba(0, 0, 0, 0);
 	color: #000;
-	margin-top: 80px;
+	margin-top: 140px;
 	padding: 0;
 }
 #hero .lp-element {
