--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,12 @@ font-family: 'Lato', sans-serif;
 	}
 }
 
+a{
+	color:#e27936;
+}
+a:focus, a:hover{
+	color:#f6df66;
+}
 /*	Form
 	==================================================*/
 label {
