--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
 body{
-font-family: 'Lato', sans-serif;
+	font-family: 'Lato', sans-serif;
+}
+a {
+	color: #e27936;
+}
+a:focus, a:hover{
+	color: #f6df66;
 }
 
 /*	Section
@@ -13,31 +19,14 @@ font-family: 'Lato', sans-serif;
 .navbar.active-section {
 	top: 0 !important;
 }
-
 .navbar-brand {
 	margin-top:14px;
-	background-image: url(../images/ceosim_v.png);
+	background-image: url(../images/ceosim_h.png);
 	background-repeat: no-repeat;
 	background-position: center;
-	background-size: cover;
-	height: 59px;
-	width: 79px;
-}
-
-@media (max-width: 767px) {
-	.navbar-brand {
-		background-image: url(../images/ceosim_h.png);
-		width: 157px;
-    	height: 43px;
-	}
-}
-
-/* Estilo Nuevo 06-11-2016 */
-a{
-	color:#e27936;
-}
-a:focus, a:hover{
-	color:#f6df66;
+	background-size: contain;
+	height: 55px;
+	width: 200px;
 }
 
 /*	Form
@@ -365,6 +354,24 @@ label {
 	margin: 0 25%;
 }
 
+/*	Social
+	==================================================*/ 
+#social {
+	background-color:#742628;
+	margin-top:2em;
+}
+
+#social .lead {
+	color: #FFF;
+}
+
+/*	Footer
+	==================================================*/ 
+footer .nav {
+	position: relative;
+	top: -10px;
+}
+
 /*	Responsive
 	==================================================*/ 
 
@@ -381,6 +388,9 @@ label {
 	}
 	.navbar-nav>li>a {
 		margin: 0 7px;
+	}
+	header .container {
+		padding: 0 3em;
 	}
 }
 @media (max-width: 767px) {
@@ -408,6 +418,10 @@ label {
 	.navbar-right button {
 		margin-top: 0;
 		margin-bottom: 50px;
+	}
+	.navbar-brand {
+		height: 55px;
+		width: 200px;
 	}
 }
 @media (max-width: 767px) {
@@ -464,8 +478,6 @@ label {
 	.faq-block {
 		margin: 0 40px;
 	}
-	
-
 }
 @media (max-width: 490px) {
 	.container {
@@ -489,4 +501,19 @@ label {
 	.faq-block {
 		margin: 0;
 	}
+
+	header {
+		background-position: 35px -90px !important;
+	}
+
+	header .container {
+		padding: 0 10px;
+	}
+
+	header .navbar-brand {
+		margin-top: 5px;
+		height: 40px;
+		width: 200px;
+	}
+
 }
