Cambiar video y desc bajo íconos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,6 +354,14 @@ label {
 	margin: 0 25%;
 }
 
+/*	Features
+	==================================================*/ 
+#features .img-circle {
+	width: 140px;
+	height: 140px;
+}
+
+
 /*	Social
 	==================================================*/ 
 #social {
