--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,34 @@
-body{
+body {
 	font-family: 'Lato', sans-serif;
 }
+
 a {
 	color: #e27936;
 }
-a:focus, a:hover{
+
+a:focus,
+a:hover {
 	color: #f6df66;
 }
 
+
 /*	Section
 	==================================================*/
+
 .section {
 	padding: 100px 0;
 }
+
 .active-section {
 	top: 80px;
 }
+
 .navbar.active-section {
 	top: 0 !important;
 }
+
 .navbar-brand {
-	margin-top:14px;
+	margin-top: 14px;
 	background-image: url(../images/ceosim_h.png);
 	background-repeat: no-repeat;
 	background-position: center;
@@ -29,250 +37,344 @@ a:focus, a:hover{
 	width: 200px;
 }
 
+
 /*	Form
 	==================================================*/
+
 label {
 	font-weight: 300;
 }
+
 .input-group {
 	margin-bottom: 10px;
 }
+
 .form-control {
 	font-weight: 300;
 	border-color: #ecf0f1;
 	background-color: #ecf0f1;
-	
 	box-shadow: none;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
-	
 	-moz-transition: all .2s;
 	-o-transition: all .2s;
 	-webkit-transition: all .2s;
 	transition: all .2s;
 }
-.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control,
-.form-control[disabled]:hover, .form-control[readonly]:hover, fieldset[disabled] .form-control:hover,
-.form-control[disabled]:focus, .form-control[readonly]:focus, fieldset[disabled] .form-control:focus {
+
+.form-control[disabled],
+.form-control[readonly],
+fieldset[disabled] .form-control,
+.form-control[disabled]:hover,
+.form-control[readonly]:hover,
+fieldset[disabled] .form-control:hover,
+.form-control[disabled]:focus,
+.form-control[readonly]:focus,
+fieldset[disabled] .form-control:focus {
 	background-color: #ecf0f1;
 }
-.form-control:hover, .form-control:focus {
+
+.form-control:hover,
+.form-control:focus {
 	outline: none;
 	border-color: #ecf0f1;
 	background-color: #FFF;
-	
 	box-shadow: none;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 }
-.form-control:-moz-placeholder{color:#bdc3c7; font-weight: 300;}
-.form-control::-moz-placeholder{color:#bdc3c7; font-weight: 300;}
-.form-control:-ms-input-placeholder{color:#bdc3c7; font-weight: 300;}
-.form-control::-webkit-input-placeholder{color:#bdc3c7; font-weight: 300;}
+
+.form-control:-moz-placeholder {
+	color: #bdc3c7;
+	font-weight: 300;
+}
+
+.form-control::-moz-placeholder {
+	color: #bdc3c7;
+	font-weight: 300;
+}
+
+.form-control:-ms-input-placeholder {
+	color: #bdc3c7;
+	font-weight: 300;
+}
+
+.form-control::-webkit-input-placeholder {
+	color: #bdc3c7;
+	font-weight: 300;
+}
+
 .input-group-addon {
 	background-color: #FFF;
 	border-color: #ecf0f1;
 	color: #ecf0f1;
 }
-[class^="has-"] .form-control, [class*=" has-"] .form-control {
+
+[class^="has-"] .form-control,
+[class*=" has-"] .form-control {
 	color: #FFF;
 }
-.has-success .help-block, .has-success .control-label, .has-success .radio, .has-success .checkbox, .has-success .radio-inline, .has-success .checkbox-inline {
+
+.has-success .help-block,
+.has-success .control-label,
+.has-success .radio,
+.has-success .checkbox,
+.has-success .radio-inline,
+.has-success .checkbox-inline {
 	color: #2ecc71;
 }
+
 .has-success .form-control {
 	border-color: #2ecc71;
 	background-color: #2ecc71;
 }
-.has-success .form-control:hover, .has-success .form-control:focus {
+
+.has-success .form-control:hover,
+.has-success .form-control:focus {
 	border-color: #2ecc71;
 	background-color: #FFF;
 	color: #2ecc71;
-	
-	box-shadow: none;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-}
-.has-warning .help-block, .has-warning .control-label, .has-warning .radio, .has-warning .checkbox, .has-warning .radio-inline, .has-warning .checkbox-inline {
-	color: #e67e22;
-}
-.has-warning .form-control {
-	border-color: #e67e22;
-	background-color: #e67e22;
-}
-.has-warning .form-control:hover, .has-warning .form-control:focus {
-	background-color: #FFF;
-	border-color: #e67e22;
-	color: #e67e22;
-	
-	box-shadow: none;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-}
-.has-error .help-block, .has-error .control-label, .has-error .radio, .has-error .checkbox, .has-error .radio-inline, .has-error .checkbox-inline {
-	color: #e74c3c;
-}
-.has-error .form-control {
-	border-color: #e74c3c;
-	background-color: #e74c3c;
-}
-.has-error .form-control:hover, .has-error .form-control:focus {
-	background-color: #FFF;
-	border-color: #e74c3c;
-	color: #e74c3c;
-	
 	box-shadow: none;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 }
 
+.has-warning .help-block,
+.has-warning .control-label,
+.has-warning .radio,
+.has-warning .checkbox,
+.has-warning .radio-inline,
+.has-warning .checkbox-inline {
+	color: #e67e22;
+}
+
+.has-warning .form-control {
+	border-color: #e67e22;
+	background-color: #e67e22;
+}
+
+.has-warning .form-control:hover,
+.has-warning .form-control:focus {
+	background-color: #FFF;
+	border-color: #e67e22;
+	color: #e67e22;
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+}
+
+.has-error .help-block,
+.has-error .control-label,
+.has-error .radio,
+.has-error .checkbox,
+.has-error .radio-inline,
+.has-error .checkbox-inline {
+	color: #e74c3c;
+}
+
+.has-error .form-control {
+	border-color: #e74c3c;
+	background-color: #e74c3c;
+}
+
+.has-error .form-control:hover,
+.has-error .form-control:focus {
+	background-color: #FFF;
+	border-color: #e74c3c;
+	color: #e74c3c;
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+}
+
+
 /*	Header
 	==================================================*/
+
 #header {
-	box-shadow: 0 0 5px rgba(0,0,0,.05);
-	-webkit-box-shadow: 0 0 5px rgba(0,0,0,.05);
-	-moz-box-shadow: 0 0 5px rgba(0,0,0,.05);
+	box-shadow: 0 0 5px rgba(0, 0, 0, .05);
+	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .05);
+	-moz-box-shadow: 0 0 5px rgba(0, 0, 0, .05);
 }
+
 
 /*	Parallax Background
 	==================================================*/
 
 #parallax {
-  height: 680px;
-  width: 100%;
-  top: 0;
-  position: fixed;
-  /*background: url('http://placehold.it/1600x1600') center center no-repeat; */
-  background-size: cover;
-  z-index: -100;
+	height: 680px;
+	width: 100%;
+	top: 0;
+	position: fixed;
+	/*background: url('http://placehold.it/1600x1600') center center no-repeat; */
+	background-size: cover;
+	z-index: -100;
 }
+
 
 /*	Navbar
 	==================================================*/
-.navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
+
+.navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-brand:focus {
 	color: #000;
 }
+
 .navbar-inverse {
 	background-color: #FFF;
-	background-position:right bottom;
-	background-repeat:no-repeat;
-	background-image:url(../images/header.png);
+	background-position: right bottom;
+	background-repeat: no-repeat;
+	background-image: url(../images/header.png);
 	border: none;
 }
+
 .navbar-right button {
 	margin: 23px 0;
 }
+
 .navbar-nav>li>a {
 	padding: 30px 0;
 	margin: 0 15px;
 }
+
 .navbar-inverse .navbar-nav>li>a {
 	color: inherit;
 	text-transform: uppercase;
 	font-size: 12px;
 }
-.navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus,
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
+
+.navbar-inverse .navbar-nav>li>a:hover,
+.navbar-inverse .navbar-nav>li>a:focus,
+.navbar-inverse .navbar-nav>.active>a,
+.navbar-inverse .navbar-nav>.active>a:hover,
+.navbar-inverse .navbar-nav>.active>a:focus {
 	background-color: transparent;
 	background-color: rgba(255, 255, 255, 0);
 	color: #3498db;
 }
+
 .header-button {
 	margin-left: 15px;
 }
 
+
 /*	Hero
 	==================================================*/
+
 #hero {
 	background: rgba(0, 0, 0, 0);
 	color: #000;
 	margin-top: 140px;
 	padding: 0;
 }
+
 #hero .lp-element {
 	padding: 150px 50px;
 	background-color: rgba(255, 255, 255, .75);
 }
+
 #hero h1 {
 	font-size: 60px;
-	
 }
+
 #hero p.lead {
 	font-size: 1.8em;
 }
 
+
 /*	Features
-	==================================================*/ 
+	==================================================*/
+
 #features {
 	background-color: #FFF;
 }
+
 .overview h1 {
 	text-transform: uppercase;
 }
-.overview, .service-block {
+
+.overview,
+.service-block {
 	text-align: center;
 }
+
 .overview .lead {
 	margin: 40px 10%;
 	margin-bottom: 80px;
 }
+
 .service-block {
 	margin-bottom: 30px;
 }
+
 .service-block .glyphicon {
 	font-size: 60px;
 	margin-bottom: 20px;
 }
 
+
 /*	Image
 	==================================================*/
+
 #image {
 	background-color: #ecf0f1;
 }
 
+
 /*	Gallery
-	==================================================*/ 
+	==================================================*/
+
 #gallery {
 	background-color: #34495e;
 	color: #FFF;
 	padding-bottom: 70px;
 }
+
 #gallery img {
 	width: 100%;
 	height: auto;
 }
+
 #gallery a {
 	margin-bottom: 30px;
 	display: block;
 }
+
 #gallery a:hover {
 	opacity: .5;
 }
 
 
 /*	Newsletter
-	==================================================*/ 
+	==================================================*/
+
 .faq-block {
 	margin: 0 80px;
 }
 
+
 /*	Slider
-	==================================================*/ 
+	==================================================*/
+
 #slider {
 	background-color: #ecf0f1;
 }
 
-.carousel-control.left, .carousel-control.right {
+.carousel-control.left,
+.carousel-control.right {
 	background-image: none;
 }
+
 .carousel-control {
 	color: #3498db;
 	opacity: 1;
 	text-shadow: none;
 }
+
 .carousel-control:hover {
 	color: #2980b9;
 }
+
 .carousel-indicators li {
 	border-color: #34495e;
 	margin: 0 2px;
@@ -282,12 +384,12 @@ label {
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	margin: 0 2px;
-	
 	-moz-transition: all .2s;
 	-o-transition: all .2s;
 	-webkit-transition: all .2s;
 	transition: all .2s;
 }
+
 .carousel-indicators .active {
 	height: 15px;
 	width: 15px;
@@ -298,64 +400,75 @@ label {
 	background-color: #34495e;
 	border: 1px solid #34495e;
 }
+
 .carousel.slide {
 	-moz-transition: all .2s;
 	-o-transition: all .2s;
 	-webkit-transition: all .2s;
 	transition: all .2s;
 }
+
 .carousel-inner blockquote {
 	border: none;
 	text-align: center;
 	padding: 40px 15%;
 }
+
 .carousel-inner blockquote small {
 	font-size: 12px;
 	text-transform: uppercase;
 	font-weight: 400;
 }
+
 .carousel-inner blockquote p {
 	font-size: 24px;
 }
+
 .carousel-control .glyphicon {
 	left: 50%;
 	margin-top: -10px;
 	margin-left: -10px;
 	font-size: 20px;
 }
+
 .carousel-indicators {
 	bottom: -20px;
 }
+
 .carousel-control {
 	background: transparent;
 	position: absolute;
 	top: 50%;
 	margin-top: 0px;
-	
 	border-radius: 20px;
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
-	
 	height: 40px;
 	width: 40px;
 }
 
+
 /*	Newsletter
-	==================================================*/ 
+	==================================================*/
+
 #newsletter {
 	text-align: center;
 }
+
 #newsletter .overview p.lead {
 	margin: 30px 10%;
 	margin-bottom: 40px;
 }
+
 #newsletter form {
 	width: 50%;
 	margin: 0 25%;
 }
 
+
 /*	Features
-	==================================================*/ 
+	==================================================*/
+
 #features .img-circle {
 	width: 140px;
 	height: 140px;
@@ -363,7 +476,8 @@ label {
 
 
 /*	Social
-	==================================================*/ 
+	==================================================*/
+
 #social {
 	background-color: #742628;
 	margin-top: 2em;
@@ -373,18 +487,21 @@ label {
 	color: #FFF;
 }
 
+
 /*	Footer
-	==================================================*/ 
+	==================================================*/
+
 footer .nav {
 	position: relative;
 	top: -10px;
 }
 
+
 /*	Responsive
-	==================================================*/ 
+	==================================================*/
 
 @media (max-width: 991px) {
-	.service-block  {
+	.service-block {
 		margin-bottom: 30px;
 	}
 	#image img.img-responsive {
@@ -401,8 +518,11 @@ footer .nav {
 		padding: 0 3em;
 	}
 }
+
 @media (max-width: 767px) {
-	.service-block, .img-responsive, .carousel {
+	.service-block,
+	.img-responsive,
+	.carousel {
 		margin-bottom: 30px;
 	}
 	.overview .lead {
@@ -432,6 +552,7 @@ footer .nav {
 		width: 200px;
 	}
 }
+
 @media (max-width: 767px) {
 	body {
 		font-size: 14px;
@@ -445,7 +566,8 @@ footer .nav {
 	h3 {
 		font-size: 20px;
 	}
-	h4, .carousel-inner blockquote p {
+	h4,
+	.carousel-inner blockquote p {
 		font-size: 18px;
 	}
 	h5 {
@@ -463,7 +585,9 @@ footer .nav {
 	.overview p.lead {
 		margin-bottom: 40px;
 	}
-	.service-block, .img-responsive, .carousel {
+	.service-block,
+	.img-responsive,
+	.carousel {
 		margin-bottom: 30px;
 	}
 	.overview .lead {
@@ -479,7 +603,8 @@ footer .nav {
 		width: 100%;
 		margin: 0;
 	}
-	.input-lg, .btn-lg {
+	.input-lg,
+	.btn-lg {
 		font-size: 12px;
 		height: 37px;
 	}
@@ -487,6 +612,7 @@ footer .nav {
 		margin: 0 40px;
 	}
 }
+
 @media (max-width: 490px) {
 	.container {
 		max-width: 430px;
@@ -509,19 +635,15 @@ footer .nav {
 	.faq-block {
 		margin: 0;
 	}
-
 	header {
 		background-position: 35px -90px !important;
 	}
-
 	header .container {
 		padding: 0 10px;
 	}
-
 	header .navbar-brand {
 		margin-top: 5px;
 		height: 40px;
 		width: 200px;
 	}
-
 }
