--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
 body{
 font-family: 'Montserrat', sans-serif !important;
 }
-h1{
-font-family: 'Montserrat', sans-serif;
+enfasis{
+color:#ff7128;
+}
+titulo {
+color:#8a2223;
 }
 a {
 	color: #e27936;
